@@ -21,7 +21,7 @@
 
 
 /*
- * $Id: image_fits.c,v 1.3 2003/04/24 09:35:34 leeming Exp $
+ * $Id: image_fits.c,v 1.4 2003/04/24 14:05:39 leeming Exp $
  *
  *.
  *  This file is part of the XForms library package.
@@ -42,7 +42,6 @@
 #include "ulib.h"
 #include <stdlib.h>
 #include <string.h>
-#include <math.h>
 #if 0
 #include "extern.h"
 #endif
@@ -123,7 +122,7 @@ typedef struct
 SPEC;
 
 #define bad_hdu(h)  (!h->simple || (h->ndim == 0 && !h->xtname[0]))
-#define Bad_bpp(p)  (p != 8 && p != 16 && fabs(p) != 32 && p != -64)
+#define Bad_bpp(p)  (p != 8 && p != 16 && abs(p) != 32 && p != -64)
 #define bad_dim(h)  (h->ndim<0 || (h->ndim>MAXDIM && h->dim[MAXDIM-1]!=1))
 
 static void
